--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.13.3",
     "react": "18",
     "react-dom": "18",
     "react-router-dom": "6"
